third section ready

--- a/blocks/section-title/section-title.css
+++ b/blocks/section-title/section-title.css
@@ -1,4 +1,4 @@
-.intro__title {
+.section-title {
     font-family: "Tenor Sans", sans-serif;
     text-transform: uppercase;
     line-height: 1.17;
