--- a/blocks/footer/__category-items/footer__category-items.css
+++ b/blocks/footer/__category-items/footer__category-items.css
@@ -3,7 +3,7 @@
   grid-template-columns: repeat(4, 1fr);
   grid-template-rows: repeat(2, 1fr);
   list-style-type: none;
-  width: 900px;
+  max-width: 900px;
   margin: 0;
   padding: 0;
 }
