--- a/pages/index.css
+++ b/pages/index.css
@@ -8,6 +8,7 @@
 @import url(../blocks/logo/logo.css);
 @import url(../blocks/header/__menu-items/header__menu-items.css);
 @import url(../blocks/header/__menu-item/header__menu-item.css);
+@import url(../blocks/title-link/title-link.css);
 
 @import url(../blocks/author-name/author-name.css);
 
