--- a/blocks/header/__menu-items/header__menu-items.css
+++ b/blocks/header/__menu-items/header__menu-items.css
@@ -2,4 +2,17 @@
     list-style-type: none;
     display: flex;
     gap: 40px;
+    padding: 0;
+}
+
+@media screen and (max-width: 660px) {
+  .header__menu-items {
+  gap: 20px;
+}
+}
+
+@media screen and (max-width: 470px) {
+  .header__menu-items {
+  gap: 15px;
+}
 }
