--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,3 +1,7 @@
 .header {
-    box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
+    min-height: 90px;
+    margin: 0 0 59px 0;
+    border-bottom: 1px solid #e5e5e5;
+    box-sizing: border-box;
+    display: flex;
 }
