--- a/blocks/intro/__article/intro__article.css
+++ b/blocks/intro/__article/intro__article.css
@@ -1,5 +1,16 @@
 .intro__article {
     display: grid;
-    grid-template-columns: 720px 1fr;
+    grid-template-columns: 60% 40%;
     grid-template-rows: auto;
+    align-items: center;
+}
+
+@media screen and (max-width: 999px) {
+  .intro__article {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 15px;
+}
 }
