--- a/blocks/intro/__content/intro__content.css
+++ b/blocks/intro/__content/intro__content.css
@@ -1,5 +1,12 @@
 .intro__content {
-    display: flex;
-    flex-direction: column;
-    padding-left: 50px;
+  display: flex;
+  flex-direction: column;
+  padding-left: 50px;
+}
+
+@media screen and (max-width: 999px) {
+  .intro__content {
+    padding-left: 0;
+    gap: 15px;
+  }
 }
