--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -1,3 +1,23 @@
 .intro {
     margin: 0 120px 35.5px 120px;
+    display: flex;
+    justify-content: center;
+}
+
+@media screen and (max-width: 999px) {
+  .intro {
+    margin: 0 90px 35.5px 90px;
+  }
+}
+
+@media screen and (max-width: 660px) {
+  .intro {
+    margin: 0 60px 35.5px 60px;
+  }
+}
+
+@media screen and (max-width: 470px) {
+  .intro {
+    margin: 0 30px 18px 30px;
+  }
 }
