--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,9 +1,16 @@
 .page {
     height: 100vh;
     min-width: 320px;
-    max-width: 1440px;
-    font-family: "Libre-franklin", sans-serif;
+    max-width: 1280px;
+    font-family: "Libre-franklin", Arial, Helvetica, sans-serif;
     font-style: normal;
     background-color: #fff;
     color: #000;
+    margin: 0 auto;
+    -moz-osx-font-smoothing: grayscale;
+    -webkit-font-smoothing: antialiased;
+    -webkit-text-size-adjust: 100%;
+    -ms-text-size-adjust: 100%;
+    -moz-text-size-adjust: 100%;
+    text-rendering: optimizeLegibility;
 }
