--- a/blocks/section-subtitle/section-subtitle.css
+++ b/blocks/section-subtitle/section-subtitle.css
@@ -5,3 +5,26 @@
     color: #666;
     margin: 0 0 28px 0;
 }
+
+@media screen and (max-width: 999px) {
+  .section-subtitle {
+    line-height: 1.3;
+    font-size: 14px;
+    text-align: center;
+    margin: 0;
+  }
+}
+
+@media screen and (max-width: 660px) {
+  .section-subtitle {
+    line-height: 1.1;
+    font-size: 12px;
+  }
+}
+
+@media screen and (max-width: 470px) {
+  .section-subtitle {
+    line-height: 1;
+    font-size: 10px;
+  }
+}
