--- a/blocks/section-title/section-title.css
+++ b/blocks/section-title/section-title.css
@@ -6,3 +6,26 @@
     font-weight: 400;
     margin: 0 0 27px 0;
 }
+
+@media screen and (max-width: 999px) {
+  .section-title {
+    line-height: 1.1;
+    font-size: 28px;
+    text-align: center;
+    margin: 0;
+  }
+}
+
+@media screen and (max-width: 660px) {
+  .section-title {
+    line-height: 1.2;
+    font-size: 18px;
+  }
+}
+
+@media screen and (max-width: 470px) {
+  .section-title {
+    line-height: 1.2;
+    font-size: 10px;
+  }
+}
