2nd section edited for mobiles etc

--- a/blocks/article-grid/__items/article-grid__items.css
+++ b/blocks/article-grid/__items/article-grid__items.css
@@ -1,8 +1,22 @@
 .article-grid__items {
   list-style-type: none;
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows: 1fr 1fr;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(2, 1fr);
   margin: 0;
   padding: 0;
+}
+
+@media screen and (max-width: 660px) {
+  .article-grid__items {
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(3, 1fr);
+  }
+}
+
+@media screen and (max-width: 470px) {
+  .article-grid__items {
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(6, 1fr);
+  }
 }
