--- a/blocks/article-grid/__item/article-grid__item.css
+++ b/blocks/article-grid/__item/article-grid__item.css
@@ -4,3 +4,25 @@
   padding: 25.5px 10px 49px 10px;
   box-sizing: border-box;
 }
+
+@media screen and (max-width: 999px) {
+  .article-grid__item {
+    padding: 10px 5px;
+    gap: 10px;
+  }
+}
+
+@media screen and (max-width: 660px) {
+  .section-title {
+    padding: 0;
+    line-height: 1.2;
+    font-size: 18px;
+  }
+}
+
+@media screen and (max-width: 470px) {
+  .section-title {
+    line-height: 1.2;
+    font-size: 10px;
+  }
+}
