--- a/blocks/image/_theme/image_theme_article-grid.css
+++ b/blocks/image/_theme/image_theme_article-grid.css
@@ -1,3 +1,9 @@
 .image_theme_article-grid {
   margin-bottom: 19px;
 }
+
+@media screen and (max-width: 999px) {
+.image_theme_article-grid {
+  margin: 0;
+}
+}
