--- a/blocks/section-title/_theme/section-title_theme_article-grid.css
+++ b/blocks/section-title/_theme/section-title_theme_article-grid.css
@@ -3,3 +3,26 @@
   line-height: 1.2;
   margin-bottom: 15px;
 }
+
+@media screen and (max-width: 999px) {
+  .section-title {
+    line-height: 1.1;
+    font-size: 18px;
+    text-align: center;
+    margin: 0;
+  }
+}
+
+@media screen and (max-width: 660px) {
+  .section-title {
+    line-height: 1;
+    font-size: 14px;
+  }
+}
+
+@media screen and (max-width: 470px) {
+  .section-title {
+    line-height: 1;
+    font-size: 12px;
+  }
+}
