--- a/blocks/section-title/section-title.css
+++ b/blocks/section-title/section-title.css
@@ -5,6 +5,11 @@
     font-size: 36px;
     font-weight: 400;
     margin: 0 0 27px 0;
+    transition: 0.7s;
+}
+
+.section-title:hover {
+  opacity: 0.4;
 }
 
 @media screen and (max-width: 999px) {
@@ -29,3 +34,4 @@
     font-size: 10px;
   }
 }
+
