--- a/pages/index.css
+++ b/pages/index.css
@@ -21,12 +21,12 @@
 @import url(../blocks/intro/intro.css);
 @import url(../blocks/intro/__article/intro__article.css);
 @import url(../blocks/intro/__content/intro__content.css);
-@import url(../blocks/intro/__image/intro__image.css);
 
 @import url(../blocks/article-grid/article-grid.css);
 @import url(../blocks/article-grid/__items/article-grid__items.css);
 @import url(../blocks/article-grid/__item/article-grid__item.css);
 @import url(../blocks/section-title/_theme/section-title_theme_article-grid.css);
+@import url(../blocks/image/image.css);
 @import url(../blocks/image/_theme/image_theme_article-grid.css);
 
 @import url(../blocks/latest-posts-grid/latest-posts-grid.css);
